# india_air_quality

./: Cargo.toml  README.md  Settings.toml
src/: main.rs
