[package]
name = "ind_pollution"
version = "0.1.0"
authors = ["mywatch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
futures = "0.1"
config = "0.10.1"
log = "0.4.8"